# bpgwrapper

./: LICENSE  README.md  main.py  player.py  pyproject.toml  setup.cfg  setup.py
bpgwrapper/: __init__.py  backgrounds.py  core.py  enums.py  event.py  game.py  renderables.py  types.py  utils.py  yieldables.py
bpgwrapper/_systems/: __init__.py  camera.py  events.py  keyboard.py  mouse.py  rendering.py  scheduling.py  time.py  window.py
