[metadata]
name = bpgwrapper
version = 0.1
author = BetaKors
author_email = leparkorsz@gmail.com
url = https://github.com/BetaKors/bpgwrapper
description = BetterPyGameWrapper
long_description = A better pygame wrapper than the one used on https://github.com/BetaKors/smart-rockets
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >= 3.10
setup_requires = setuptools

[options.package_data]
bpgwrapper = py.typed, *.pyi, **/*.pyi

[mypy]
cache_dir = .mypy_cache/strict
strict_optional = True
show_error_codes = True
show_column_numbers = True
warn_no_return = True
disallow_any_unimported = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
strict_equality = True
warn_unused_ignores = True
